--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "airtable": "^0.12.2",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "router": "^1.3.8",
+    "save": "^2.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
